--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About us</a></li>
+          <li><a class="nav-link scrollto" href="./about.html">About us</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="./blog.html">Blog</a></li>
           
 
 
@@ -59,7 +60,7 @@
           </li> -->
 
 
-          <li><a class="getstarted scrollto" href="#about">OFFER</a></li>
+          <li><a class="getstarted scrollto" href="tel:+8800000000">Call Now</a></li>
 
 
 
@@ -233,6 +234,7 @@
     </div>
   </div>
 </section>
+
 
 
 
@@ -566,6 +568,8 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>//
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Template Main JS File -->
