--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@
       <div class="header-banner-container">
         <div class="ak-container">
           <div class="page-title-wrap">
-            <h1 class="page-title">About Us</h1>
+            <h1 class="page-title">Blog</h1>
             <div id="enlighten-breadcrumb">
               <a href="./index.html">Home</a> &gt; <span class="current">About Us</span>
             </div>    				
