--- a/blog.html
+++ b/blog.html
@@ -86,7 +86,7 @@
           <div class="page-title-wrap">
             <h1 class="page-title">Blog</h1>
             <div id="enlighten-breadcrumb">
-              <a href="./index.html">Home</a> &gt; <span class="current">About Us</span>
+              <a href="./index.html">Home</a> &gt; <span class="current">Blog</span>
             </div>    				
           </div>
         </div>
