--- a/blog.html
+++ b/blog.html
@@ -46,6 +46,7 @@
           <li><a class="nav-link scrollto" href="./about.html">About us</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="#blog">Blog</a></li>
           
 
 
