--- a/index.html
+++ b/index.html
@@ -306,6 +306,35 @@
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="col">
           <div class="card">
+            <img src="./assets/img/018.JPG" class="card-img-top" alt="Card 2">
+            <div class="card-body">
+              <h5 class="card-title">Well-Up Technology</h5>
+              <p class="card-text">Hover over this card to see the additional details and button.</p>
+              <a href="#" class="btn btn-light">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col">
+          <div class="card">
+            <img src="./assets/img/019.JPG" class="card-img-top" alt="Card 2">
+            <div class="card-body">
+              <h5 class="card-title">Kingster School, College & University</h5>
+              <p class="card-text">Hover over this card to see the additional details and button.</p>
+              <a href="#" class="btn btn-light">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col">
+          <div class="card">
             <img src="./assets/img/asdf.JPG" class="card-img-top" alt="Card 2">
             <div class="card-body">
               <h5 class="card-title">Card Title 2</h5>
@@ -315,6 +344,8 @@
           </div>
         </div>
       </div>
+
+
 
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
@@ -495,11 +526,11 @@
         <div class="col-md-6">
           <div class="accordion-item">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              Accordion Item #1
+              What services does Coders School provide?
               <span class="accordion-icon">+</span>
             </div>
             <div class="accordion-content">
-              <p>This is the content for item 1. You can put any text or HTML here.</p>
+              <p>Coders School provides web design (e-commerce, blog, portfolio, news, custom website) and graphics design (logo, banner, post, custom design) services. We ensure high quality and innovative solutions. Visit our services section for details.</p>
             </div>
           </div>
         </div>
@@ -507,11 +538,11 @@
         <div class="col-md-6">
           <div class="accordion-item">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              Accordion Item #1
+              How long does it take to build a custom web application?
               <span class="accordion-icon">+</span>
             </div>
             <div class="accordion-content">
-              <p>This is the content for item 1. You can put any text or HTML here.</p>
+              <p>Typically, it can take anywhere from a few weeks to a few months to build a custom web application. The time frame varies depending on the complexity of the project and the features required. After an initial discussion, a detailed project plan and timeline will be provided.</p>
             </div>
           </div>
         </div>
@@ -520,11 +551,11 @@
         <div class="col-md-6">
           <div class="accordion-item">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              Accordion Item #1
+              How can I start a project with Coders School?
               <span class="accordion-icon">+</span>
             </div>
             <div class="accordion-content">
-              <p>This is the content for item 1. You can put any text or HTML here.</p>
+              <p>To get started, you can contact us through our website. Once you have provided us with your requirements, we will provide you with a suitable plan, cost and timeframe after an initial discussion. Once everything is finalized, we will start working on the project.</p>
             </div>
           </div>
         </div>
@@ -607,6 +638,43 @@
   </div>
 </section>
     
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <section id="process" class="process">
+  <div class="container md:py-28 pt-5 mb-[-30px]">
+    <div class="section-title">
+      <h2>Website setup process</h2>
+      <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+    </div>
+
+    <div class="flex flex-col items-center pt-10 md:pt-2">
+      <img class="md:block hidden" src="https://storex.com.bd/imgs/pages/storexInfoGraphicsWeb.png" alt="">
+      <img class="block md:hidden" src="https://storex.com.bd/imgs/pages/storexInfoGraphicsMobile.png" alt="">
+    </div>
+  </div>
+</section> -->
+
+
+
+
+
+
+
+
 
 
 
