--- a/index.html
+++ b/index.html
@@ -563,11 +563,11 @@
         <div class="col-md-6">
           <div class="accordion-item">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              Accordion Item #1
+              What is included in the graphic design service?
               <span class="accordion-icon">+</span>
             </div>
             <div class="accordion-content">
-              <p>This is the content for item 1. You can put any text or HTML here.</p>
+              <p>Includes logos, banners, posters, social media posts, and custom designs.</p>
             </div>
           </div>
         </div>
@@ -575,11 +575,11 @@
         <div class="col-md-6">
           <div class="accordion-item">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              Accordion Item #1
+              Will there be any support after project delivery?
               <span class="accordion-icon">+</span>
             </div>
             <div class="accordion-content">
-              <p>This is the content for item 1. You can put any text or HTML here.</p>
+              <p>Yes, free support is provided for a certain period of time and additional support is provided if needed.</p>
             </div>
           </div>
         </div>
@@ -587,16 +587,38 @@
         <div class="col-md-6">
           <div class="accordion-item">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-              Accordion Item #1
+              What are the benefits of working with Coders School?
               <span class="accordion-icon">+</span>
             </div>
             <div class="accordion-content">
-              <p>This is the content for item 1. You can put any text or HTML here.</p>
+              <p>Professional quality design, on-time delivery, support, and customized solutions – all available together.</p>
             </div>
           </div>
         </div>
 
+        <div class="col-md-6">
+          <div class="accordion-item">
+            <div class="accordion-header" onclick="toggleAccordion(this)">
+              What are the benefits of working with Coders School?
+              <span class="accordion-icon">+</span>
+            </div>
+            <div class="accordion-content">
+              <p>Professional quality design, on-time delivery, support, and customized solutions – all available together.</p>
+            </div>
+          </div>
+        </div>
 
+        <div class="col-md-6">
+          <div class="accordion-item">
+            <div class="accordion-header" onclick="toggleAccordion(this)">
+              What are the benefits of working with Coders School?
+              <span class="accordion-icon">+</span>
+            </div>
+            <div class="accordion-content">
+              <p>Professional quality design, on-time delivery, support, and customized solutions – all available together.</p>
+            </div>
+          </div>
+        </div>
 
       </div>
 
